resources/css/public/_layout.scss
@use './functions/range';

body {
    display: flex;
    flex-direction: column;
    min-width: var(--width-min);
    min-height: 100vh;
    min-height: 100dvh;
    font-family: var(--font-primary);
    font-variation-settings: var(--font-primary-settings);
    font-size: 16px;
    font-weight: 250;
    color: var(--color-font-secondary);
    background-color: var(--color-white);
    line-height: var(--base-line-height);
    overflow-x: hidden;
    overflow-y: auto;
}

.is-opened-extended-menu body {
    overflow: hidden;
    margin-right: var(--compensate-scrollbar, 0);
}

button,
h1,
.h1,
h2,
.h2,
h3,
.h3,
h4,
.h4,
h5,
.h5,
h6,
.h6,
.main-menu,
.footer-menu {
    font-family: var(--font-secondary);
    font-variation-settings: var(--font-secondary-settings);
    font-weight: var(--font-secondary-default-weight);
}

.main-menu,
.footer-menu {
    font-weight: var(--font-menu-weight);
    text-transform: uppercase;
}

input,
textarea,
select {
    font-family: var(--font-primary);
    color: var(--color-font-primary);
}

main {
    display: flex;
    flex-direction: column;
    flex: 1 1 auto;
    padding-bottom: var(--section-gap-mobile, 48px);

    @media (min-width: 768px) {
        padding-bottom: var(--section-gap, 72px);
    }
}

.container {
    --container-width: var(--width-max);
    --container-px: var(--gap-container);
    --container-py: 0;
    --container-pt: var(--container-py);
    --container-pb: var(--container-py);
    --container-pl: var(--container-px);
    --container-pr: var(--container-px);

    width: calc(var(--container-width) + var(--gap-container) * 2);
    max-width: 100%;
    margin-left: auto;
    margin-right: auto;
    padding: var(--container-pt) var(--container-pr) var(--container-pb) var(--container-pl);
}

section:has(.target-anchor-section) {
    position: relative;
}

.target-anchor-section {
    width: 100%;
    height: 1px;
    position: absolute;
    left: 0;
    top: calc(var(--header-height) * -1 - 30px);
}

.inner-page {
    &-head {
        margin-top: calc(var(--header-height) + range.build(30, 60));
        text-align: center;

        &.is-text-left {
            text-align: left;
        }
    }

    .inner-page-title {
        font-size: range.build(32, 50);
    }

    &-content {
        --container-py: #{range.build(30, 60)};
    }
}

.formatted-text {
    &>*:not(:first-child) {
        margin-top: 1em;

        @media (min-with: 992px) {
            margin-top: 1.5em;
        }
    }

    > ul:not(:first-child),
    > ol:not(:first-child) {
        margin-top: 0.5em;
    }

    li + li {
        margin-top: 0.3em;
    }

    h1,
    .h1,
    h2,
    .h2,
    h3,
    .h3,
    h4,
    .h4,
    h5,
    .h5,
    h6,
    .h6 {
        line-height: 1.2;
        margin-bottom: 0.75em;
    }

    h2,
    .h2 {
        font-size: 26px;

        @media (min-width: 992px) {
            font-size: 28px;
        }

        @media (min-width: 1240px) {
            font-size: 30px;
        }

        @media (min-width: 1440px) {
            font-size: 32px;
        }

        @media (min-width: 1680px) {
            font-size: 36px;
        }
    }

    h3,
    .h3 {
        font-size: range.build(24, 32);
    }

    h4,
    .h4 {
        font-size: range.build(22, 26);
    }

    h5,
    .h5 {
        font-size: range.build(20, 22);
    }

    h6,
    .h6 {
        font-size: range.build(18, 20);
    }


    p {
        min-height: .5em;
    }

    a {
        color: var(--color-interaction-primary-default);
        text-decoration-color: currentColor;
        text-underline-offset: .2em;
        transition: var(--transition);
        transition-property: color, text-decoration-color;

        &:hover {
            color: var(--color-interaction-primary-hover);
        }
    }

    ul {
        display: flex;
        flex-direction: column;
        gap: .2em;
        list-style: none;
        padding-left: 0;
        margin: 0 0 .5em;

        li {
            position: relative;
            padding-left: .55em;
            line-height: 1.55;
            margin-top: 0;
            margin-bottom: 0;

            &::marker {
                content: none;
            }

            &::before {
                display: block;
                content: '–';
                font-size: 1em;
                line-height: 1.55;
                position: absolute;
                top: 0;
                left: 0;
                color: currentColor;
            }
        }
    }

    ol {
        list-style-type: numeric;
        padding-left: 1.25em;
    }

    strong {
        font-weight: var(--font-secondary-default-weight);
    }

    picture {
        display: block;
        padding: 14px;
        background-color: var(--color-gray-light);
        border-radius: var(--radius);

        &:not(:first-child) {
            margin-top: 3.5em;
        }

        &:not(:last-child) {
            margin-bottom: 3.5em;
        }

        img {
            display: block;
            max-width: 100%;
            height: auto;
            margin: 0 auto;
        }
    }

    img {
        max-width: 100%;
        height: auto;
        //border-radius: var(--radius-sm);
    }

    iframe {
        display: block;
        width: 100%;
        //max-width: 700px;
        aspect-ratio: 16 / 9;
        margin: 0 auto;
    }

    figure {
        display: flex;
        flex-direction: column;
        max-width: 100%;
        gap: 1em;
        font-size: range.build(12, 14);
        color: var(--color-gray);

        &:not(:first-child) {
            margin-top: range.build(2, 3.5, em);
        }

        &:not(:last-child) {
            margin-bottom: range.build(2, 3, em);
        }

        picture {
            &:not(:first-child) {
                margin-top: 0;
            }

            &:not(:last-child) {
                margin-bottom: 0;
            }
        }

        a {
            text-decoration-color: currentColor;

            &:hover {
                text-decoration-color: currentColor;
            }
        }
    }

    blockquote {
        background-color: var(--color-white);
        border-radius: var(--radius);
        padding: range.build(24, 48) range.build(34, 78);
        position: relative;
        box-shadow: 0 6px 26px rgba(var(--color-dark-rgb), .05);

        &:not(:first-child) {
            margin-top: range.build(2, 3, em);
        }

        &:not(:last-child) {
            margin-bottom: range.build(2, 3, em);
        }

        &::before,
        &::after {
            --pseudo-position: #{range.build(10, 24)};

            display: block;
            content: '';
            width: range.build(18, 24);
            aspect-ratio: 1;
            background-color: var(--color-primary-brand-800-dark);
            mask-image: var(--icon-bloquote);
            mask-repeat: no-repeat;
            mask-position: center;
            mask-size: contain;
            position: absolute;
        }

        &::before {
            top: var(--pseudo-position);
            left: var(--pseudo-position);
        }

        &::after {
            right: var(--pseudo-position);
            bottom: var(--pseudo-position);
            rotate: 180deg;
        }
    }
}

[class*=line-clamp] {
    --line-clamp: 1;

    display: -webkit-box;
    line-clamp: var(--line-clamp);
    -webkit-line-clamp: var(--line-clamp);
    -webkit-box-orient: vertical;
    overflow: hidden;
    text-overflow: ellipsis;
}

.line-clamp {
    --line-clamp: 1;

    &-1 {
        --line-clamp: 1;
    }

    &-2 {
        --line-clamp: 2;
    }

    &-3 {
        --line-clamp: 3;
    }

    &-4 {
        --line-clamp: 4;
    }

    &-5 {
        --line-clamp: 5;
    }
}

* {
    @media (hover: hover) {
        &::-webkit-scrollbar {
            width: 8px;
            height: 8px;
        }

        &::-webkit-scrollbar-thumb {
            background-color: var(--scroll-thumb-clr);
            border-radius: 4px;
            box-shadow: none;
            border: 2px solid transparent;

            &:hover {
                background-color: var(--scroll-thumb-hover-clr);
            }
        }
    }

    @-moz-document url-prefix() {
        @media (hover: hover) {
            scrollbar-width: thin;
            scrollbar-color: var(--scroll-thumb-clr) transparent;

            &:hover {
                scrollbar-color: var(--scroll-thumb-hover-clr) transparent;
            }
        }
    }
}

